@@ -1,3 +1,10 @@
+2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly/plugins/graphs/__init__.py:
+
+	Check whether ploticus and gnuplot are installed before using them. If
+	one of them is not present the graph that requires it is skipped. 
+
 2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly/plugins/generations/generations.py:
